# gobject-subclass

./: .gitignore  .travis.yml  Cargo.toml  Gir_Gio.toml  README.md
gio-subclass/: Cargo.toml
gio-subclass/src/: action.rs  action_group.rs  action_map.rs  app_info.rs  app_launch_context.rs  application.rs  drive.rs  free.rs  lib.rs  menu.rs  menu_attribute_iter.rs  menu_item.rs  menu_link_iter.rs  menu_model.rs  mount.rs  permission.rs  settings.rs  simple_action.rs  simple_action_group.rs  simple_permission.rs  volume.rs  volume_monitor.rs
gio-subclass/src/auto/: action.rs  action_group.rs  action_map.rs  application.rs  mod.rs
gio-subclass/src/custom/: action-get_name-trampoline.rs  action-get_parameter_type-trampoline.rs  action-get_state_hint-trampoline.rs  action-get_state_type-trampoline.rs  application-local_command_line-trampoline.rs  application-open-trampoline.rs
gio-subclass/tests/: simple_action.rs  simple_application.rs
gobject-subclass/: CHANGELOG.md  Cargo.toml
gobject-subclass/src/: deref.rs  guard.rs  lib.rs  object.rs  properties.rs  simple.rs  types.rs
gobject-subclass/tests/: simple_object.rs  simple_object_without_wrapper.rs
