[package]
name = "gio-subclass"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>",
           "Dirk Van Haerenborgh <vhdirk@gmail.com>"]
repository = "https://github.com/sdroege/gobject-subclass"
license = "MIT/Apache-2.0"

[dependencies]
libc = "0.2"

gobject-subclass = { path="../gobject-subclass" }

glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gio-sys = { git = "https://github.com/gtk-rs/sys" }

glib = { git = "https://github.com/gtk-rs/glib" }
gio = { git = "https://github.com/gtk-rs/gio" }
