[package]
name = "gio-subclass"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>",
           "Dirk Van Haerenborgh <vhdirk@gmail.com>"]
repository = "https://github.com/gtk-rs/gobject-subclass"
license = "MIT/Apache-2.0"

[dependencies]
libc = "0.2"

gobject-subclass = { version = "0.2", path="../gobject-subclass" }

glib-sys = "0.7"
gobject-sys = "0.7"
gio-sys = "0.7"

glib = "0.6"
gio = "0.5"
