[package]
name = "gobject-subclass"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
categories = ["api-bindings"]
description = "Infrastructure for GObject subclassing in Rust"
repository = "https://github.com/sdroege/gobject-subclass"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["gnome"]

[dependencies]
libc = "0.2"
glib-sys = "0.6"
gobject-sys = "0.6"
glib = "0.5"

[lib]
name = "gobject_subclass"
path = "src/lib.rs"
