[package]
name = "gobject-subclass"
version = "0.3.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
categories = ["api-bindings"]
description = "Infrastructure for GObject subclassing in Rust"
repository = "https://github.com/gtk-rs/gobject-subclass"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["gnome"]

[dependencies]
libc = "0.2"
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
glib = { git = "https://github.com/gtk-rs/glib" }

[lib]
name = "gobject_subclass"
path = "src/lib.rs"
