[package]
name = "gobject-subclass"
version = "0.2.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
categories = ["api-bindings"]
description = "Infrastructure for GObject subclassing in Rust"
repository = "https://github.com/gtk-rs/gobject-subclass"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["gnome"]

[dependencies]
libc = "0.2"
glib-sys = "0.7"
gobject-sys = "0.7"
glib = "0.6"

[lib]
name = "gobject_subclass"
path = "src/lib.rs"
